# python-piscine

Python0 - Starting/ex00/: Hello.py
Python0 - Starting/ex01/: format_ft_time.py
Python0 - Starting/ex02/: find_ft_type.py
Python0 - Starting/ex03/: NULL_not_found.py
Python0 - Starting/ex04/: whatis.py
Python0 - Starting/ex05/: building.py
Python0 - Starting/ex06/: filterstring.py  ft_filter.py
Python0 - Starting/ex07/: sos.py  tester.py
Python0 - Starting/ex08/: Loading.py
Python0 - Starting/ex09/: LICENSE  README.md  pyproject.toml
Python0 - Starting/ex09/ft_package/: count.py
Python1 - Arrays/ex00/: give_bmi.py  test.py
Python1 - Arrays/ex01/: array2D.py  tester.py
Python1 - Arrays/ex02/: load_image.py
Python1 - Arrays/ex03/: load_image.py  zoom.py
Python1 - Arrays/ex04/: load_image.py  rotate.py
Python1 - Arrays/ex05/: load_image.py  pimp_image.py  tester.py
